Update examples and outputs in index.html for clarity and specificity
- Revised examples to better reflect iterative processes and decision-making outputs.
- Updated outputs to emphasize early UI ideation and its role in the development process.
- Enhanced overall clarity of the content to improve understanding.

--- a/index.html
+++ b/index.html
@@ -974,16 +974,16 @@
         riskLabel: "low",
         oneLiner: "Code as cognitive scaffolding: compress ambiguity, surface trade-offs, expose edge cases.",
         examples: [
-          "PRDs + iterative refinement (artefact becomes the shared source of truth)",
+          "Iterative refinement to inform requirements",
           "UI explorations used to reason (not necessarily to ship). Think 'lofi mockups' or 'concept UI'.",
-          "Decision narratives / exec summaries (KV-style communication)"
+          "Decision narratives / exec summaries (KV-style communication), or just 'thinking' outputs"
         ],
         watchouts: [
           "Don’t over-engineer; optimise for learning, not longevity",
           "Be explicit: disposable artefact, not production commitment",
           "Capture key decisions so it doesn’t vanish into vibes"
         ],
-        outputs: ["PRD or UI ideation", "concept UI", "interactive doc", "executable narrative"]
+        outputs: ["Early UI ideation", "concept UI", "interactive doc", "executable narrative"]
       },
       {
         id: "L2",
