Add favicon link to multiple HTML files for consistent branding

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vibe-coding Spectrum (Cursor)</title>
-  <link rel="icon" href="/favicon.png" />
+  <link rel="icon" href="favicon.png" />
   <style>
     :root{
       --bg:#f8f7f4;
@@ -1013,7 +1013,7 @@
         id: "L3",
         verb: "Prove",
         name: "Feasibility probes (engineering conversation tools)",
-        intent: "Is this real?",
+        intent: "Is this possible?",
         consequence: 60,
         integration: 55,
         fidelity: 70,
