Minor fix of version switcher padding

--- a/v3.html
+++ b/v3.html
@@ -630,7 +630,7 @@
       display: flex;
       align-items: center;
       gap: 6px;
-      padding: 8px 14px;
+      padding: 8px;
       border-radius: 999px;
       background: color-mix(in srgb, var(--panel) 82%, transparent);
       border: 1px solid var(--line);
